AWSCloudFormation/yps.template
AWSTemplateFormatVersion: 2010-09-09
Resources:
# Networks
  gw1:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref YPSvpc
      InternetGatewayId: !Ref YPSigw
  YPSigw:
    Type: 'AWS::EC2::InternetGateway'
    Properties: {}
  YPSvpc:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: 172.31.0.0/16
      InstanceTenancy: default
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
  YPSdchpAssoc:
    Type: 'AWS::EC2::VPCDHCPOptionsAssociation'
    Properties:
      VpcId: !Ref YPSvpc
      DhcpOptionsId: !Ref YPSdopt
  YPSsubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      CidrBlock: 172.31.16.0/20
      AvailabilityZone: ap-northeast-1d
      VpcId: !Ref YPSvpc
  YPSdopt:
    Type: 'AWS::EC2::DHCPOptions'
    Properties:
      DomainName: ap-northeast-1.compute.internal
      DomainNameServers:
        - AmazonProvidedDNS
  YPSeip:
    Type: 'AWS::EC2::EIP'
    Properties:
      InstanceId: !Ref YPSinstance
  YPSsubnetRTBassoc:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref YPSrtb
      SubnetId: !Ref YPSsubnet
# SecurityGroups
  YPSsgdefault:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: default VPC security group
      VpcId: !Ref YPSvpc
  sgCentOS7x8664withUpdatesHVM200201AutogenByAWSMP:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: >-
        This security group was generated by AWS Marketplace and is based on
        recommended settings for CentOS 7 (x86_64) - with Updates HVM version
        2002_01 provided by Centos.org
      VpcId: !Ref YPSvpc
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 7
        ToPort: 7
        CidrIp: 0.0.0.0/0
# RouteTables
  YPSrtb:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref YPSvpc
  route1:
    Type: 'AWS::EC2::Route'
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      RouteTableId: !Ref YPSrtb
      GatewayId: !Ref YPSigw
    DependsOn: gw1
# Instances
  YPSinstance:
    Type: 'AWS::EC2::Instance'
    Properties:
      DisableApiTermination: 'false'
      InstanceInitiatedShutdownBehavior: stop
      EbsOptimized: 'true'
      ImageId: ami-06a46da680048c8ae # CentOS Linux 7 x86_64 HVM EBS ENA 2002_01
      InstanceType: t3a.nano
      KeyName: yps
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeType: gp2
            VolumeSize: '30'
            DeleteOnTermination: 'false'
            Encrypted: 'false'
      Monitoring: 'false'
      NetworkInterfaces:
        - DeleteOnTermination: 'true'
          DeviceIndex: 0
          SubnetId: !Ref YPSsubnet
          PrivateIpAddresses:
            - PrivateIpAddress: 172.31.29.145
              Primary: 'true'
          GroupSet:
            - !Ref sgCentOS7x8664withUpdatesHVM200201AutogenByAWSMP
          AssociatePublicIpAddress: 'true'
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          # EC2 startup script
          # Get systems ready to accept Ansible configuration
          yum -y update
          
          /bin/dd if=/dev/zero of=/var/swap.1 bs=1M count=1024
          /sbin/mkswap /var/swap.1
          /sbin/swapon /var/swap.1
          
          yum install policycoreutils-python
          semanage port -m -t ssh_port_t -p tcp 7
          sed --in-place 's/^#Port.*/Port 7/' /etc/ssh/sshd_config
          sed --in-place 's/^#PermitRootLogin yes/PermitRootLogin no/' /etc/ssh/sshd_config
          systemctl restart sshd
          iptables -F

          useradd ansible
          usermod -G wheel ansible
          echo "ansible:passwd"|chpasswd
          
          mkdir -p ~ansible/.ssh
          cp /home/centos/.ssh/authorized_keys ~ansible/.ssh/
          chown ansible:ansible ~ansible/.ssh/authorized_keys
